--- a/platform.web/nimbusui/src/index.html
+++ b/platform.web/nimbusui/src/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
-  <body>
+  <body class="browserScroll">
     <!-- Add root application component -->
     <app-root></app-root>
     
