--- a/nimbus-ui/nimbusui/src/index.html
+++ b/nimbus-ui/nimbusui/src/index.html
@@ -16,9 +16,8 @@
 	  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <!-- <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>page.
     <script src="node_modules/systemjs/dist/system.src.js"></script> -->
-    <script src="app_scripts.js"></script>
     <script type="text/javascript">
       /* App Specific Styles - load in the end after loading framework styles */
       var appStyleLink = document.createElement('link');
