--- a/nimbus-ui/nimbusui/src/index.html
+++ b/nimbus-ui/nimbusui/src/index.html
@@ -17,13 +17,31 @@
     
     <script src="app_scripts.js"></script>
     <script type="text/javascript">
-      /* App Specific Styles - load in the end after loading framework styles */
-      var appStyleLink = document.createElement('link');
-      appStyleLink.rel = 'stylesheet';
-      appStyleLink.href = 'styles/app_styles.css';
-      appStyleLink.type = 'text/css';
-      var linkTag = document.getElementsByTagName('link')[0];
-      linkTag.parentNode.appendChild(appStyleLink);
+      function onReady() {
+        var readyStateCheckInterval = setInterval(function() {
+          if (document && document.readyState === 'complete') { // Or 'interactive'
+            clearInterval(readyStateCheckInterval);
+            loadExternalStyles();
+          }
+        }, 10);
+      }
+      function loadExternalStyles() {
+        /* Brand Specific Styles*/
+        var baseStyleLink = document.createElement('link');
+        baseStyleLink.rel = 'stylesheet';
+        baseStyleLink.href = 'styles/nm_theme.min.css';
+        baseStyleLink.type = 'text/css';
+        var baseLinkTag = document.getElementsByTagName('link')[0];
+        baseLinkTag.parentNode.appendChild(baseStyleLink);
+        /* App Specific Styles - load in the end after loading framework styles */
+        var appStyleLink = document.createElement('link');
+        appStyleLink.rel = 'stylesheet';
+        appStyleLink.href = 'styles/app_styles.css';
+        appStyleLink.type = 'text/css';
+        var linkTag = document.getElementsByTagName('link')[1];
+        linkTag.parentNode.appendChild(appStyleLink);
+      }
+      onReady();
     </script>
   </body>
 </html>
